# uv2nix-torchWithCuda

./: LICENSE  README.md  README.org  flake.nix  pyproject.toml
data/: get_cifar10.sh  get_mnist.sh
src/denoising_diffusion_pytorch/: classifier_free_guidance.py  train.py
src/hello_world/: __init__.py
