[project]
name = "denoising_diffusion_pytorch"
version = "0.1.0"
description = "denoising_diffusion_pytorch nixified"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "urllib3>=2.2.3",
    "accelerate",
    "einops",
    "ema-pytorch>=0.4.2",
    "numpy",
    "pillow",
    "pytorch-fid",
    "scipy",
    "torch>=2.0",
    "torchvision",
    "tqdm"
]

[project.scripts]
train_script = "denoising_diffusion_pytorch.train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.6.7",
]
